@@ -1,5 +1,9 @@
 # $Id$
 
+2006-07-17	Konstantin V. Arkhipov
+
+	* meta/: DTD updated, forgotten shortcut to identifier implemented.
+
 2006-07-16	Dmitry E. Demidov
 
 	* core/Form/Primitives/PrimitiveTernary.class.php: added.
